@@ -4,10 +4,10 @@
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:cmf="http://namespaces.zope.org/cmf"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
     i18n_domain="ftw.notification.base">
 
     <five:registerPackage package="." initialize=".initialize" />
-   	<cmf:registerDirectory name="ftw_notification_base"/>
     <include package=".viewlets" />
 
     <!-- Register the installation GenericSetup extension profile -->
@@ -41,5 +41,12 @@
     <include package=".browser" />    
     <include package=".adapters" />
     <include package=".events" />
-  
+
+    <include package="ftw.upgrade" file="meta.zcml" />
+
+    <upgrade-step:directory
+        profile="ftw.notification.base:default"
+        directory="./upgrades"
+        />
+
 </configure>
