@@ -1,4 +1,3 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>2</version>
 </metadata>
